fix(style): Removing transform feature for Safari on iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -516,3 +516,10 @@ h1 {
 	word-wrap: break-word;
 }
 }
+
+/* For Safari on iOS */
+@supports (-webkit-touch-callout: none) {
+/*Using universal selector to ensure content doesn't exceed screen size*/
+.img_scale:active img, .img_scale:focus img {
+	transform: none;
+}
